--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <i class="fas fa-video"></i>
         <i class="fab fa-buromobelexperte"></i>
         <i class="far fa-bell"></i>
-        <div class="account"><img src="media/img/account.png" alt="" /></div>
+        <div class="account"><img src="media/account.png" alt="" /></div>
       </div>
 
       <div class="stream"><i class="fas fa-stream"></i></div>
@@ -82,7 +82,7 @@
 
         <div class="channel">
           <div class="logo-channel">
-            <img src="media/img/logo-channel.jpg" alt="" />
+            <img src="media/logo-channel.jpg" alt="" />
           </div>
 
           <div class="name-channel">
